--- a/eRxWeb/eRxWeb.csproj
+++ b/eRxWeb/eRxWeb.csproj
@@ -5956,6 +5956,9 @@
     <Content Include="Reports\EpcsMonthlyReport.rdlc" />
     <Content Include="Reports\GetAdhocReport.rdlc" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
